--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,1 @@
-DATABASE_URL=postgres://postgres:KILLSECUBERALLEN@192.168.1.2:1488/postgre
-PASSWORD=C2N1gh7W47ch-S0L####
-
+DATABASE_URL=postgres://postgres:5XmRxM7ShLOLRXVP@192.168.1.11:30841/postgres
